...
import androidx.compose.ui.unit.dp
import kotlinx.coroutines.delay
import kotlinx.coroutines.launch
import rickaban.projects.androidassessment.R

const val TAG_TXT_PAGE2_TEST_TEXT1 = "txt_test_text_1"
const val TAG_BTN_PAGE2_TEST_TEXT = "btn_test_text"
const val TAG_BTN_NOT_TEST_TEXT = "btn_not_test_text"
const val TEST_TEXT1 = "test text 1"

/**
 * PURE STATELESS UI
 * Since there is no user input or dynamic state here, the entire screen
 * is just a pure function of its arguments.
...
