...
import kotlinx.coroutines.delay
import kotlinx.coroutines.launch
import rickaban.projects.androidassessment.R

private const val MIN_PASSWORD_LENGTH = 4
const val REQUIRED_PASSWORD = "Test@2026"
const val TAG_EDT_LOGIN_PASSWORD = "edt_login_password"
const val TAG_BTN_LOGIN_SUBMIT = "btn_login_submit"

/**
 * STATEFUL CONTAINER
 * Handles all business logic, state retention, and focus management.
 */
@Composable
...
